Increase number of verify-network pods
When the conformance test starts running in upgrade-cluster Concourse job, there
are sometimes timeouts when connecting to the apiserver. This increases the
number of pods that run the verify-network test before starting the conformance
test, to ensure the network has really settled. There should be approximately
four passes of the job per node.

--- a/ci/assets/verify-network.yml
+++ b/ci/assets/verify-network.yml
@@ -7,9 +7,10 @@ kind: Job
 metadata:
   name: verify-network
 spec:
-  # Run the same number of pods as nodes. This is combined with
-  # pod anti-affinity to ensure the job runs on every node.
-  completions: 6
+  # Run multiple passes on each node. Combining the number
+  # of completions with pod anti-affinity ensures the job
+  # runs on every node multiple times.
+  completions: 24
   parallelism: 6
 
   backoffLimit: 1000
