--- a/stack/cloudformation/common.yml
+++ b/stack/cloudformation/common.yml
@@ -221,12 +221,14 @@ Resources:
               - ec2:DeleteSecurityGroup
               - ec2:DeleteRoute
               - ec2:DeleteVolume
+              - ec2:DescribeAccountAttributes
               - ec2:DescribeAvailabilityZones
               - ec2:DescribeInstances
               - ec2:DescribeRouteTables
               - ec2:DescribeSubnets
               - ec2:DescribeSecurityGroups
               - ec2:DescribeVolumes
+              - ec2:DescribeVpcs
               - ec2:DetachVolume
               - ec2:ModifyInstanceAttribute
               - ec2:RevokeSecurityGroupIngress
@@ -237,18 +239,25 @@ Resources:
               - elasticloadbalancing:AddTags
               - elasticloadbalancing:AttachLoadBalancerToSubnets
               - elasticloadbalancing:ApplySecurityGroupsToLoadBalancer
+              - elasticloadbalancing:CreateListener
               - elasticloadbalancing:CreateLoadBalancer
               - elasticloadbalancing:CreateLoadBalancerPolicy
               - elasticloadbalancing:CreateLoadBalancerListeners
+              - elasticloadbalancing:CreateTargetGroup
               - elasticloadbalancing:ConfigureHealthCheck
               - elasticloadbalancing:DeleteLoadBalancer
               - elasticloadbalancing:DeleteLoadBalancerListeners
+              - elasticloadbalancing:DescribeListeners
               - elasticloadbalancing:DescribeLoadBalancers
               - elasticloadbalancing:DescribeLoadBalancerAttributes
+              - elasticloadbalancing:DescribeTargetGroups
+              - elasticloadbalancing:DescribeTargetHealth
               - elasticloadbalancing:DetachLoadBalancerFromSubnets
               - elasticloadbalancing:DeregisterInstancesFromLoadBalancer
               - elasticloadbalancing:ModifyLoadBalancerAttributes
+              - elasticloadbalancing:ModifyTargetGroup
               - elasticloadbalancing:RegisterInstancesWithLoadBalancer
+              - elasticloadbalancing:RegisterTargets
               - elasticloadbalancing:SetLoadBalancerPoliciesForBackendServer
             Resource:
               - '*'
