Add subnet tagging to keights-stack Ansible role
This adds the option to tag node subnets for autodiscovery by the controller
manager for the creation of ELBs.

--- a/stack/ansible/example/vars.yml
+++ b/stack/ansible/example/vars.yml
@@ -72,6 +72,9 @@ api_access_cidr: 0.0.0.0/0
 # node groups as you want to the list below.
 node_groups:
 - subnet_ids: '{{ node_subnet_ids }}'
+  subnet_tags:
+    'kubernetes.io/cluster/{{ cluster }}': 'shared'
+    'kubernetes.io/role/internal-elb': '1'
   # The name must be unique for each group
   name: app
   min_instances: 2
