--- a/stack/ansible/keights-stack/tasks/main.yml
+++ b/stack/ansible/keights-stack/tasks/main.yml
@@ -183,3 +183,27 @@
   loop: '{{ keights_stack.node_groups }}'
   tags:
     - nodes
+
+- name: map node subnets to tags
+  set_fact:
+    subnet_tag_map: '{{ subnet_tag_map | combine(dict(item.subnet_ids | zip_longest([], fillvalue=node_groups[idx].subnet_tags) | list)) }}'
+  loop: '{{ keights_stack.node_groups }}'
+  loop_control:
+    index_var: idx
+  when: '"subnet_tags" in item'
+
+- name: collect subnet facts
+  ec2_vpc_subnet_facts:
+    filters:
+      subnet-id: '{{ item.key }}'
+  loop: '{{ subnet_tag_map | dict2items }}'
+  register: node_subnet_facts
+
+- name: tag node subnets
+  ec2_vpc_subnet:
+    vpc_id: '{{ keights_stack.vpc_id }}'
+    cidr: '{{ item.subnets.0.cidr_block }}'
+    map_public: '{{ item.subnets.0.map_public_ip_on_launch }}'
+    tags: '{{ item.item.value }}'
+    purge_tags: false
+  loop: '{{ node_subnet_facts.results }}'
