Give each Lambda its own IAM role
This scopes the permissions of each Lambda only to use the API calls needed,
instead of sharing permissions among all Lambdas.

--- a/stack/ansible/keights-stack/tasks/main.yml
+++ b/stack/ansible/keights-stack/tasks/main.yml
@@ -128,7 +128,9 @@
       LoadBalancerSecurityGroup: '{{ common_stack.stack_outputs.LoadBalancerSecurityGroup }}'
       LoadBalancerIdleTimeout: '{{ keights_stack.masters.load_balancer_idle_timeout | default(600) }}'
       MasterSecurityGroups: '{{ ([common_stack.stack_outputs.MasterSecurityGroup] + keights_stack.masters.extra_security_groups | default([])) | join(",") }}'
-      LambdaRoleArn: '{{ common_stack.stack_outputs.LambdaRoleArn }}'
+      AutoNamerLambdaRoleArn: '{{ common_stack.stack_outputs.AutoNamerLambdaRoleArn }}'
+      KubeCaLambdaRoleArn: '{{ common_stack.stack_outputs.KubeCaLambdaRoleArn }}'
+      SubnetToAzLambdaRoleArn: '{{ common_stack.stack_outputs.SubnetToAzLambdaRoleArn }}'
       InstanceAttributeFunctionArn: '{{ common_stack.stack_outputs.InstanceAttributeFunctionArn }}'
       KmsKeyId: '{{ keights_stack.kms_key_alias }}'
       PodCidr: '{{ keights_stack.masters.pod_cidr }}'
