--- a/keights/resources/usr/lib/tmpfiles.d/keights.conf
+++ b/keights/resources/usr/lib/tmpfiles.d/keights.conf
@@ -2,5 +2,6 @@ d /etc/kubernetes 0755 root root - -
 d /etc/kubernetes/manifests 0755 root root - -
 d /etc/kubernetes/pki 0700 root root - -
 d /etc/kubernetes/pki/etcd 0700 root root - -
+d /etc/pki/etcd 0700 root root - -
 D /var/lib/kubeadm 0700 root root - -
 D /run/kubernetes/pki 0700 root root - -
