--- a/stack/ami/debian/playbook.yml
+++ b/stack/ami/debian/playbook.yml
@@ -185,6 +185,7 @@
           kubelet={{ k8s_version_no_v }}-00 && \
         dpkg -i /tmp/keights.deb && \
         apt-get clean && \
+        systemctl disable kubelet.service && \
         systemctl disable apt-daily.timer && \
         systemctl disable apt-daily-upgrade.timer && \
         update-alternatives --set iptables /usr/sbin/iptables-legacy
