--- a/stack/cloudformation/master-external.yml
+++ b/stack/cloudformation/master-external.yml
@@ -10,32 +10,28 @@ Parameters:
     Description: Number of master instances
     Type: Number
     Default: 1
-    AllowedValues: [1, 3]
-    ConstraintDescription: You must choose an odd number of instances
   VpcId:
     Description: ID of VPC where cluster will be placed
     Type: AWS::EC2::VPC::Id
-  SubnetIds:
+  MasterSubnetIds:
     Description: >-
-      List of subnets IDs in VPC where cluster will be placed.
-      The number of subnets must match the NumInstances parameter.
+      List of subnets IDs in VPC where master instances will be placed.
     Type: List<AWS::EC2::Subnet::Id>
   LoadBalancerSubnetIds:
     Description: >-
       List of subnets IDs in VPC for API load balancer.
-      The number of subnets must match the NumInstances parameter.
     Type: List<AWS::EC2::Subnet::Id>
   ImageId:
     Description: ID of AMI used for instances
     Type: AWS::EC2::Image::Id
   InstanceType:
-    Description: Type of EC2 instance
+    Description: Type of EC2 instance for master instances
     Type: String
   KeyPair:
     Description: SSH keypair assigned to instances
     Type: AWS::EC2::KeyPair::KeyName
-  MasterInstanceProfile:
-    Description: Name of IAM Instance profile to assign to instances
+  InstanceProfile:
+    Description: Name of IAM Instance profile to assign to master instances
     Type: String
   LoadBalancerScheme:
     Description: Scheme of API load balancer
@@ -51,14 +47,11 @@ Parameters:
     Description: Idle timeout on load balancer
     Type: Number
     Default: 600
-  MasterSecurityGroups:
+  SecurityGroups:
     Description: Security groups of masters
     Type: CommaDelimitedList
   AutoNamerLambdaRoleArn:
     Description: Role ARN to assign to AutoNamer helper Lamba function
-    Type: String
-  KubeCaLambdaRoleArn:
-    Description: Role ARN to assign to KubeCa helper Lamba function
     Type: String
   SubnetToAzLambdaRoleArn:
     Description: Role ARN to assign to SubnetToAz helper Lamba function
@@ -97,14 +90,9 @@ Parameters:
       availability zone and the value of the EtcdDomain parameter.
     Type: String
     Default: etcd
-  EtcdVolumeSize:
-    Description: Size of etcd volume in GB
-    Default: 10
-    Type: Number
-  EtcdDevice:
-    Description: Name of the etcd EBS volume, using the full device path.
-    Default: /dev/xvdg
-    Type: String
+  EtcdAvailabilityZones:
+    Description: Availability zones where etcd is located.
+    Type: CommaDelimitedList
   ImageRepository:
     Description: Repository for core Kubernetes Docker images
     Type: String
@@ -134,9 +122,6 @@ Parameters:
         "storage-driver": "overlay2"
       }
 
-Conditions:
-  HasThreeMasters: !Equals [!Ref NumInstances, 3]
-
 Resources:
   SubnetToAzFunction:
     Type: AWS::Lambda::Function
@@ -148,55 +133,6 @@ Resources:
       Runtime: go1.x
       Timeout: 30
       Role: !Ref SubnetToAzLambdaRoleArn
-
-  KubeCaFunction:
-    Type: AWS::Lambda::Function
-    Properties:
-      Code:
-        S3Bucket: !Ref ResourceBucket
-        S3Key: !Sub stackbot/kube_ca/${KeightsVersion}/go1.x/kube_ca-${KeightsVersion}.zip
-      Handler: kube_ca
-      Runtime: go1.x
-      Timeout: 60
-      Role: !Ref KubeCaLambdaRoleArn
-
-  AutoNamingFunction:
-    Type: AWS::Lambda::Function
-    Properties:
-      Code:
-        S3Bucket: !Ref ResourceBucket
-        S3Key: !Sub stackbot/auto_namer/${KeightsVersion}/go1.x/auto_namer-${KeightsVersion}.zip
-      Handler: auto_namer
-      Runtime: go1.x
-      Timeout: 30
-      Role: !Ref AutoNamerLambdaRoleArn
-      Environment:
-        Variables:
-          ASG_NAME: !Ref AWS::StackName
-          DNS_TTL: 15
-          HOST_BASE_NAME: !Ref EtcdPrefix
-          HOSTED_ZONE_NAME: !Ref EtcdDomain
-          HOSTED_ZONE_ID: !Ref HostedZoneId
-
-  AutoNamingEventsRule:
-    Type: AWS::Events::Rule
-    Properties:
-      Targets:
-        - Id: !Sub ${AWS::StackName}-auto-namer
-          Arn: !GetAtt AutoNamingFunction.Arn
-      EventPattern:
-        source: [aws.autoscaling]
-        detail-type: [EC2 Instance Launch Successful]
-        detail:
-          AutoScalingGroupName: [!Ref 'AWS::StackName']
-
-  AutoNamingInvokePermission:
-    Type: AWS::Lambda::Permission
-    Properties:
-      FunctionName: !Ref AutoNamingFunction
-      Action: lambda:InvokeFunction
-      Principal: events.amazonaws.com
-      SourceArn: !GetAtt AutoNamingEventsRule.Arn
 
   InstanceAttributeEventsRule:
     Type: AWS::Events::Rule
@@ -223,17 +159,7 @@ Resources:
     DependsOn: SubnetToAzFunction
     Properties:
       ServiceToken: !GetAtt SubnetToAzFunction.Arn
-      SubnetIds: !Ref SubnetIds
-
-  KubeCa:
-    Type: Custom::KubeCa
-    DependsOn: KubeCaFunction
-    Properties:
-      ServiceToken: !GetAtt KubeCaFunction.Arn
-      ClusterName: !Ref ClusterName
-      KmsKeyId: !Ref KmsKeyId
-      # KeightsVersion is not used by the Lambda, it only triggers an update
-      KeightsVersion: !Ref KeightsVersion
+      SubnetIds: !Ref MasterSubnetIds
 
   LoadBalancer:
     Type: AWS::ElasticLoadBalancing::LoadBalancer
@@ -260,7 +186,7 @@ Resources:
 
   AutoScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
-    DependsOn: [KubeCa, AutoNamingInvokePermission, InstanceAttributeInvokePermission]
+    DependsOn: [InstanceAttributeInvokePermission]
     CreationPolicy:
       ResourceSignal:
         Count: !Ref NumInstances
@@ -271,7 +197,7 @@ Resources:
       LaunchConfigurationName: !Ref LaunchConfiguration
       MaxSize: !Ref NumInstances
       MinSize: !Ref NumInstances
-      VPCZoneIdentifier: !Ref SubnetIds
+      VPCZoneIdentifier: !Ref MasterSubnetIds
       LoadBalancerNames: [!Ref LoadBalancer]
       Tags:
         - Key: Name
@@ -289,56 +215,15 @@ Resources:
           - AlarmNotification
           - ScheduledActions
 
-  Volume1:
-    Type: AWS::EC2::Volume
-    Properties:
-      AvailabilityZone: !Select [0, !Split [",", !GetAtt SubnetToAz.AvailabilityZones]]
-      Size: !Ref EtcdVolumeSize
-      VolumeType: gp2
-      Encrypted: true
-      Tags:
-        - Key: Name
-          Value: !Ref ClusterName
-        - Key: etcd:instance
-          Value: 1
-
-  Volume2:
-    Type: AWS::EC2::Volume
-    Condition: HasThreeMasters
-    Properties:
-      AvailabilityZone: !Select [1, !Split [",", !GetAtt SubnetToAz.AvailabilityZones]]
-      Size: !Ref EtcdVolumeSize
-      VolumeType: gp2
-      Encrypted: true
-      Tags:
-        - Key: Name
-          Value: !Ref ClusterName
-        - Key: etcd:instance
-          Value: 2
-
-  Volume3:
-    Type: AWS::EC2::Volume
-    Condition: HasThreeMasters
-    Properties:
-      AvailabilityZone: !Select [2, !Split [",", !GetAtt SubnetToAz.AvailabilityZones]]
-      Size: !Ref EtcdVolumeSize
-      VolumeType: gp2
-      Encrypted: true
-      Tags:
-        - Key: Name
-          Value: !Ref ClusterName
-        - Key: etcd:instance
-          Value: 3
-
   LaunchConfiguration:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
-      IamInstanceProfile: !Ref MasterInstanceProfile
+      IamInstanceProfile: !Ref InstanceProfile
       ImageId: !Ref ImageId
       InstanceType: !Ref InstanceType
       KeyName: !Ref KeyPair
       PlacementTenancy: default
-      SecurityGroups: !Ref MasterSecurityGroups
+      SecurityGroups: !Ref SecurityGroups
       UserData:
         Fn::Base64:
           !Sub
@@ -349,23 +234,6 @@ Resources:
                 owner: root:root
                 permissions: '0644'
                 content: ${DockerOptions}
-
-              - path: /etc/systemd/system/keights-volumize.service.d/environment.conf
-                owner: root:root
-                permissions: '0644'
-                content: |
-                  [Service]
-                  Environment=AWS_REGION=${AWS::Region}
-                  Environment=KEIGHTS_CLUSTER_NAME=${ClusterName}
-                  Environment=KEIGHTS_VOLUME_TAG=etcd:instance
-                  Environment=KEIGHTS_VOLUME_DEVICE=${EtcdDevice}
-
-              - path: /etc/systemd/system/var-lib-etcd.mount.d/mount.conf
-                owner: root:root
-                permissions: '0644'
-                content: |
-                  [Mount]
-                  What=${EtcdDevice}
 
               - path: /etc/systemd/system/keights-whisper-controller.service.d/environment.conf
                 owner: root:root
@@ -383,6 +251,7 @@ Resources:
                   Environment=AWS_REGION=${AWS::Region}
                   Environment=KEIGHTS_CLUSTER_DOMAIN=${ClusterDomain}
                   Environment=KEIGHTS_ETCD_DOMAIN=${EtcdDomain}
+                  Environment=KEIGHTS_ETCD_MODE=external
                   Environment=KEIGHTS_PREFIX=${EtcdPrefix}
                   Environment=KEIGHTS_APISERVER=${LoadBalancer.DNSName}
                   Environment=KEIGHTS_API_PORT=443
@@ -393,7 +262,7 @@ Resources:
                   Environment=KEIGHTS_KUBERNETES_VERSION=${KubernetesVersion}
                   Environment=KEIGHTS_AZS=${AvailabilityZones},
 
-              - path: /etc/systemd/system/keights-signal.service.d/environment.conf
+              - path: /etc/systemd/system/keights-controller-signal.service.d/environment.conf
                 owner: root:root
                 permissions: '0644'
                 content: |
@@ -404,13 +273,11 @@ Resources:
 
             runcmd:
               - systemctl daemon-reload
-              - systemctl enable var-lib-etcd.mount
               - systemctl enable kubelet.service
-              - systemctl start --no-block keights-templatize-kubeadm-init-config.service
-              - systemctl start --no-block keights-kubeadm-init.service
-              - systemctl start --no-block keights-signal.service
+              - systemctl start --no-block keights-kubeadm-init-external.service
+              - systemctl start --no-block keights-controller-signal.service
 
-          - { AvailabilityZones: !GetAtt SubnetToAz.AvailabilityZones }
+          - { AvailabilityZones: !Join [',', !Ref EtcdAvailabilityZones] }
 
 Outputs:
   LoadBalancerDnsName:
