--- a/ci/assets/v1.15-external/cluster/vars.yml
+++ b/ci/assets/v1.15-external/cluster/vars.yml
@@ -5,7 +5,9 @@ subnet_ids:
 - subnet-37ef771b
 - subnet-10cd9e58
 - subnet-1abe2e40
+etcd_instance_type: t3.medium
 master_instance_type: t3.medium
+num_master_instances: 3
 keypair: keights
 load_balancer_scheme: internal
 kms_key_id: 714e0cab-0d59-4885-b45b-31d44467fe5c
@@ -15,6 +17,8 @@ pod_cidr: 10.0.0.0/16
 service_cidr: 10.1.0.0/16
 ssh_access_cidr: 172.31.0.0/16
 api_access_cidr: 172.31.0.0/16
+# node_port_access_cidr is opened up for testing NodePorts on public IPs.
+node_port_access_cidr: 0.0.0.0/0
 docker_options:
   'ip-masq': false
   'iptables': false
