Add the ability to delete a cluster
The `keights-stack` Ansible role now takes a `state` parameter which may be
either `present` or `absent`, defaulting to `present` to keep the existing
behavior. CI pipelines now ensure stacks are deleted after testing clusters.

--- a/ci/assets/v1.15-external/cluster/playbook.yml
+++ b/ci/assets/v1.15-external/cluster/playbook.yml
@@ -3,6 +3,7 @@
   roles:
   - role: keights-stack
     keights_stack:
+      state: '{{ state }}'
       cluster_name: '{{ cluster }}'
       cfn_role_arn: '{{ cfn_role_arn }}'
       vpc_id: '{{ vpc_id }}'
@@ -39,3 +40,4 @@
         plugin: kube-router
         # Let the masters act as route reflectors for CI clusters
         rr_node_label: node-role.kubernetes.io/master
+    when: 'state == "present"'
