--- a/ci/assets/v1.16-stacked/cluster/requirements.txt
+++ b/ci/assets/v1.16-stacked/cluster/requirements.txt
@@ -3,6 +3,7 @@ ansible==2.7.14
 asn1crypto==0.24.0
 awscli==1.16.174
 bcrypt==3.1.7
+boto==2.49.0
 boto3==1.9.164
 botocore==1.12.164
 cachetools==3.1.1
