--- a/stack/ansible/example/requirements.txt
+++ b/stack/ansible/example/requirements.txt
@@ -1,27 +1,28 @@
 adal==1.2.1
-ansible==2.7.12
+ansible==2.7.14
 asn1crypto==0.24.0
 awscli==1.16.174
-bcrypt==3.1.6
+bcrypt==3.1.7
+boto==2.49.0
 boto3==1.9.164
 botocore==1.12.164
 cachetools==3.1.1
 certifi==2019.3.9
-cffi==1.12.3
+cffi==1.13.2
 chardet==3.0.4
 colorama==0.3.9
-cryptography==2.7
+cryptography==2.8
 dictdiffer==0.8.0
 docutils==0.14
 google-auth==1.6.3
 idna==2.8
-Jinja2==2.10.1
+Jinja2==2.10.3
 jmespath==0.9.4
 kubernetes==8.0.1
 MarkupSafe==1.1.1
 oauthlib==3.0.1
 openshift==0.8.9
-paramiko==2.4.2
+paramiko==2.6.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
 pycparser==2.19
@@ -29,7 +30,7 @@ PyJWT==1.7.1
 PyNaCl==1.3.0
 python-dateutil==2.8.0
 python-string-utils==0.6.0
-PyYAML==3.13
+PyYAML==5.1.2
 requests==2.22.0
 requests-oauthlib==1.2.0
 rsa==3.4.2
